--- a/Day5/index.css
+++ b/Day5/index.css
@@ -1,28 +1,18 @@
 #container-box {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     border: 2px solid black;
-    gap: 2px;
+    gap: 4px;
     height: 500px;
 }
 
 .box {
-    border: 2px solid rgb(36, 37, 35);
-}
-
-#head {
-    background-color: black;
-    color: white;
-    text-align: center;
-}
-
-#footer {
-    background-color: black;
-    color: white;
+    border: 2px solid rgb(109, 109, 109);
 }
 
 .box:nth-child(1),
+.box:nth-child(2),
 .box:nth-child(3),
 .box:nth-child(4),
 .box:nth-child(6) {
@@ -33,5 +23,16 @@
 }
 
 .part {
-    border: 2px solid blue;
+    border: 2px solid grey;
+}
+
+#head {
+    background-color: rgb(0, 0, 0);
+    color: rgb(34, 120, 196);
+    text-align: center;
+}
+
+#footer {
+    background-color: black;
+    color: white;
 }
